Adjust header spacing, removed fixed position.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,21 +13,15 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 0 10px;
 }
 
 #header img {
   height: 50px;
 }
 
-#header nav {
-  display: flex;
-}
-
 #header nav span {
-  padding: 10px;
+  padding: 15px;
 }
 
 #header nav span a {
